# mockexchange-gateway

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-draft.yml  release.yml
examples/: README.md  advanced_balance_operations.py  basic_usage.py  capability_checking.py  debug_orders.py  error_handling.py  fetch_ticker.py  list_open_orders.py  place_market_order.py  replay_usage.py  test.ipynb  test_imports.py  test_open_orders.py
mockexchange_gateway/: __init__.py  ccxt_like.py  client.py  config.py  exceptions.py  models.py  typing.py  utils.py
mockexchange_gateway/adapters/: __init__.py  mapping.py  paper.py  prod.py
mockexchange_gateway/backends/: __init__.py  inmemory.py  replay.py
mockexchange_gateway/config/: __init__.py  symbols.py
mockexchange_gateway/core/: __init__.py  capabilities.py  errors.py  facade.py
mockexchange_gateway/runtime/: __init__.py  factory.py
scripts/: create-release-branch.sh  create-release.sh
tests/: conftest.py  test_ccxt_like.py  test_client.py  test_inmemory_backend.py  test_models.py
tests/config/: credentials.example.py  load_credentials.py  run_integration_tests.py
tests/helpers/: __init__.py  credentials.py
tests/integration/: __init__.py  test_cross_mode.py  test_paper_mode.py  test_prod_mode.py
tests/unit/: test_capabilities.py  test_facade.py  test_factory.py
