[project]
name = "mockexchange-gateway"
version = "0.1.0"
description = "CCXT-like client for mockexchange_api"
authors = [{ name = "Didac", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.9.0",
    "types-requests",
]
examples = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
