[tool.poetry]
name = "mockexchange-gateway"
version = "0.2.0"
description = "CCXT-compatible gateway for seamless switching between MockExchange and real exchanges"
authors = ["Didac Cristobal <didac.crst@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mockexchange_gateway"}]
keywords = ["trading", "cryptocurrency", "exchange", "ccxt", "mockexchange", "paper-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
ccxt = "^4.0.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.9.0"
types-requests = "*"
pre-commit = "^3.0.0"
commitizen = "^3.0.0"
bandit = "^1.7.0"
twine = "^5.0.0"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "integration: marks tests as integration tests (requires real API credentials)",
    "slow: marks tests as slow running",
    "paper: marks tests that use paper mode (MockExchange)",
    "prod: marks tests that use production mode (real exchanges)",
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
